lab/angular/css/main.css
html,
body {
 margin: 0;
 padding: 0;
}

body {
 color: #211f1e ;
 background: url(/lab/angular/img/bg.jpg) no-repeat center center fixed;
 background-size: cover;
 font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.container {
 position: relative;
 top: 100px;
}

h1 {
 font-family: "HelveticaNeue-UltraLight", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 font-size: 80px;
 font-weight: normal;
 margin: 0;
 text-align: right;
}

h2 {
 border-top: 1px solid #211f1e ;
 font-size: 24px;
 font-weight: bold;
 margin: 10px 0 40px 0;
 padding: 30px 0 0 0;
 text-align: right;
}

.day > div {
    font-weight: bold;
 line-height: 48px;
}

.weekday span {
 font-size: 18px;
 font-weight: bold;
}

.weekday p {
 display: inline-block;
 font-size: 18px;
 font-weight: bold;
}

.weather img {
 width: 48px;
}

.high p,
.low p,
.hourly .temp {
 font-size: 16px;
}

.hourly {
 text-align: center;
 display: none;
}

.hourly .hour {
 font-weight: bold;
 font-size: 16px;
}

.hourly img {
 width: 24px;
}

.hourly p {
 margin: 16px 0;
}

.last {
 margin-bottom: 100px;
}

